# arboris

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  example_usage.cc  pyproject.toml
benchmark/: CMakeLists.txt  README.md  __init__.py  benchmark_main.cpp
benchmark/config/: __init__.py  benchmark_config.py  requirements-benchmark.txt
benchmark/core/: __init__.py  benchmark_runner.py
benchmark/core/parsers/: __init__.py  base_parser.py  lxml_parser.py  selectolax_parser.py
benchmark/runners/: __init__.py  example_usage.py  run_comparison_benchmark.py  run_lxml_benchmark.py
benchmark/tests/conformance/: test_queries_equivalence.py
benchmark/tests/conformance/fixtures/broken/: tiny_broken.html
benchmark/tests/conformance/fixtures/dynamic/: tiny_dynamic.html
benchmark/tests/conformance/fixtures/static/: tiny_static.html
benchmark/utils/: __init__.py  utils_compare.py
hooks/: pre-commit
include/arboris/: arboris.hpp
scripts/: cppcheck.sh  init_dev.sh  run-clang-tidy.sh  run-cpplint.sh  run-ruff.sh
src/: CMakeLists.txt
src/dom/: base_node.hpp  dom_builder.cc  dom_builder.hpp  dom_container.cc  dom_container.hpp  dom_indexer.cc  dom_indexer.hpp  dom_manager.cc  dom_manager.hpp  dom_query.hpp  dom_types.hpp  html_tag_provider.cc  html_tag_provider.hpp  html_token_parser.cc  html_token_parser.hpp  node.hpp  tag_node.hpp  tag_provider.hpp  text_node.hpp  token_parser.hpp
src/parser/: example_usage.cc  html_parser.cc  html_parser.hpp
src/string/: string.hpp  string_scalar.cc
src/utils/: assertion.hpp  html_tokens.hpp  query_options.hpp  string_pool.hpp  tag.cc  tag.h  tag.hpp  token.hpp  tokens.hpp
tests/: CMakeLists.txt  dom_builder_test.cc  example_test.cc  html_tag_provider_test.cc  html_token_parser_test.cc  string_test.cc
