[project]
name = "arboris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "html5lib>=1.1",
    "lxml>=6.0.1",
    "lxml-stubs>=0.5.1",
    "numpy>=2.0.2",
    "psutil>=7.0.0",
    "selectolax>=0.3.34",
]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true
unsafe-fixes = false
lint.select = ["E","F","W","I","PL"]
lint.ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["arboris"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
]
